--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
 
 [dependencies]
 chrono = "0.4.26"
+dotenv = "0.15.0"
 env_logger = "0.10.0"
 ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
 futures-util = "0.3.28"
